--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -101,7 +101,7 @@
 						}
 						<!-- Additional rows can go here -->
 						<tr id="noResults" style="display: none;">
-								<td colspan="5" class="text-center" style="text-align:center">Không tìm thấy nội dung</td>
+							<td colspan="5" class="text-center" >Không tìm thấy nội dung</td>
 						</tr>
 						</tbody>
 					</table>
