--- a/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
@@ -13,6 +13,7 @@
         case "Index_ProfileManager":
         case "ShowStatistics":
         case "ClassList":
+        case "ClassInfo":
             Layout = "_PrototypeLayout";
             break;
     }
