--- a/CAPSTONE_TEAM01_2024/Views/ProfileManager/Index_ProfileManager.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/ProfileManager/Index_ProfileManager.cshtml
@@ -160,6 +160,8 @@
 </div>
 
 <!-- Modal: Thêm tài khoản -->
+
+
 <!-- Modal: Xem chi tiết -->
 <!-- Modal: Cập nhật -->
 <!-- Modal: Xóa -->
@@ -239,5 +241,6 @@
 	});
 
 </script>
+
 }
-@await Html.PartialAsync("AddProfileManager", new ProfileManagerModel())
+@await Html.PartialAsync("AddProfileManager", Model	)
